# otlet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.txt
.githooks/: pre-commit
.github/workflows/: mypy.yml  pytest.yml
docs/: conf.py  documentation.rst  index.rst
otlet/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  http.py  markers.py  otlet.py  types.py  util.py
otlet/cli/: actions.py  arguments.py  cli.py  options.py  util.py
otlet/packaging/version/: __init__.py  _structures.py  etc.py
test/: test_otlet.py
