[tool.poetry]
name = "otlet"
version = "0.6.0b1"
description = "CLI tool and wrapper for PyPI JSON Web API"
readme = "README.md"
documentation = "https://otlet.readthedocs.io/en/latest/"
repository = "https://github.com/nhtnr/otlet"
license = "MIT"
authors = ["Noah Tanner (nhtnr) <noahtnr@gmail.com>"]
classifiers = ["Development Status :: 4 - Beta", "Environment :: Console",  "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "License :: OSI Approved :: BSD License", "License :: OSI Approved :: Apache Software License"]

[tool.poetry.scripts]
otlet = "otlet.cli.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
Sphinx = {version = "^4.5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.931"
black = "^22.3.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
